<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>avicit.platform6</groupId>
		<artifactId>avicit-platform6</artifactId>
		<version>6.3.2</version>
        <relativePath>../avicit-platform6/pom.xml</relativePath>
	</parent>
	<groupId>avicit.platform6</groupId>
	<artifactId>avicit-platform6-main</artifactId>
	<version>6.3.2</version>
	<packaging>war</packaging>
	<name>avicit-platform6-main</name>
	<description>avicit-platform6-main</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-api</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-component</artifactId>
			<version>${platform6-version}</version>
		</dependency>

		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-centralcontrol</artifactId>
			<version>${platform6-version}</version>
		</dependency>

		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-controller</artifactId>
			<version>${platform6-version}</version>
		</dependency>

		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-restadmin</artifactId>
			<version>${platform6-version}</version>
		</dependency>

		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-search</artifactId>
			<version>6.3.2.1</version>
		</dependency>

		<!--dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-demo</artifactId>
			<version>${platform6-version}</version>
		</dependency-->

		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-bpmadmin</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-bpmclient</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-eform</artifactId>
			<version>6.3.2.1</version>
		</dependency>
		
		<!-- <dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-sync-client</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-sync-server</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		 -->
		 
		 <dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-mgate</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-msecure</artifactId>
			<version>${platform6-version}</version>
		</dependency>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-msecure-ui</artifactId>
			<type>war</type>
			<version>${platform6-version}</version>
		</dependency>
		<dependency>
			<groupId>avicit.platform6</groupId>
			<artifactId>avicit-platform6-eform-ui</artifactId>
			<type>war</type>
			<version>6.3.2.1</version>
		</dependency>
		
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

		</plugins>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
					<exclude>**/.svn/*</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.res</include>
					<include>**/*.conf</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
                <filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>
		
	</build>
	
	<profiles>
		<!-- 构建普通的war包（不适用于WAS） 
		     这里定义的依赖在WAS环境下是需要特殊处理的，
			 所以，不能在全局依赖中进行声明，而必须在
			 这里进行声明。
			 
			 运行命令：
			    mvn clean package
		-->
        <profile>
          <id>_normal_case_</id>
            <activation>
               <!-- Activation via *absence* of a system property to ensure mutual exclusivity
                   of this profile with internal-release -->
               <property>
                  <name>!was</name>
               </property>
           </activation>

		   <dependencies>		   
			  <dependency>
				  <groupId>avicit.platform6</groupId>
			  	  <artifactId>avicit-platform6-core</artifactId>
				  <version>${platform6-version}</version>
			  </dependency>
			  <dependency>
				  <groupId>avicit.platform6</groupId>
				  <artifactId>avicit-platform6-bpmengine</artifactId>
				  <version>${platform6-version}</version>
			  </dependency>
			  <dependency>
				  <groupId>avicit.platform6</groupId>
				  <artifactId>avicit-platform6-system</artifactId>
				  <version>${platform6-version}</version>
			  </dependency>
			  <dependency>
				  <groupId>javax.servlet</groupId>
				  <artifactId>jstl</artifactId>
			  </dependency>
		 </dependencies>
	
         <build>
		 
         <plugins>
			  <plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<warSourceExcludes>
						**/*.all.js,
						avicit/oa/**,
						avicit/platform6/demo/**,
						avicit/platform6/sync/**,
						avicit/platform6/esb/**,
						static/js/platform/esb/**
					</warSourceExcludes>
					<overlays>
                        <overlay>
							<groupId>avicit.platform6</groupId>
							<artifactId>avicit-platform6-msecure-ui</artifactId>
                        </overlay>
						<overlay>
							<groupId>avicit.platform6</groupId>
							<artifactId>avicit-platform6-eform-ui</artifactId>
                        </overlay>
                    </overlays>
                    <warSourceDirectory>src/main/webapp</warSourceDirectory>
                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>		
				</configuration>
			  </plugin>
          </plugins>
         </build>
        </profile>

		<!-- 构建WAS的war包
		     这里定义的依赖在WAS环境下是需要特殊处理的：
			    删除stax-api-1.0.1.jar；
			    删除jstl.jar；
				删除juel-api-2.2.6.jar、juel-impl-2.2.6.jar
				删除servlet-api-2.5.jar；
				
		     ant task完成的工作：
			    web.xml：将exception-type注释掉；将default的servlet-mapping去掉
			    修改platform6.properties，设置netty.server.switch=off
				
			运行命令：
			    mvn -Dwas clean package
		-->
        <profile>
            <id>_was_case_</id>
            <activation>
               <property>
                 <name>was</name>
               </property>
            </activation>
			
			<dependencies>		   
				 <dependency>
					<groupId>avicit.platform6</groupId>
					<artifactId>avicit-platform6-core</artifactId>
					<version>${platform6-version}</version>
				   <exclusions>
					 <exclusion>
					   <groupId>stax</groupId>
					   <artifactId>stax-api</artifactId>
					 </exclusion>
					 <exclusion>
					   <groupId>javax.servlet</groupId>
					   <artifactId>servlet-api</artifactId>
					 </exclusion>
				   </exclusions>
				 </dependency>
				<dependency>
					<groupId>avicit.platform6</groupId>
					<artifactId>avicit-platform6-system</artifactId>
					<version>${platform6-version}</version>
				   <exclusions>
					 <exclusion>
					   <groupId>stax</groupId>
					   <artifactId>stax-api</artifactId>
					 </exclusion>
				   </exclusions>
				</dependency>
				<dependency>
				   <groupId>avicit.platform6</groupId>
				   <artifactId>avicit-platform6-bpmengine</artifactId>
				   <version>${platform6-version}</version>
				   <exclusions>
					 <exclusion>
					   <groupId>de.odysseus.juel</groupId>
					   <artifactId>juel-api</artifactId>
					 </exclusion>
					 <exclusion>
					   <groupId>de.odysseus.juel</groupId>
					   <artifactId>juel-impl</artifactId>
					 </exclusion>
				   </exclusions>
				</dependency>
			</dependencies>

			<build>
				 <plugins>
					  <plugin>
						<artifactId>maven-war-plugin</artifactId>
						<configuration>
							<warSourceExcludes>
								**/*.all.js,
								avicit/oa/**,
								avicit/platform6/demo/**,
								avicit/platform6/sync/**,
								avicit/platform6/esb/**,
								static/js/platform/esb/**
							</warSourceExcludes>
					  	    <warSourceDirectory>src/main/webapp</warSourceDirectory>
						    <webXml>${project.build.directory}/webxml/web.xml</webXml>
						</configuration>
					  </plugin>
						<plugin>
							<artifactId>maven-antrun-plugin</artifactId>
							<executions>
								<execution>
								    <id>copy-web.xml</id>  
									<phase>generate-resources</phase>
									<configuration>
                                      <tasks>  
                                         <echo>make a copy of web.xml</echo>  
                                         <mkdir dir="${project.build.directory}/webxml"/>  
                                         <copy file="${basedir}/src/main/webapp/WEB-INF/web.xml" tofile="${project.build.directory}/webxml/web.xml" overwrite="true"/>  
                                       </tasks>   
									</configuration>
									<goals>
										<goal>run</goal>
									</goals>
								</execution>
								<execution>
								    <id>process-web.xml</id>  
									<phase>prepare-package</phase>
									<configuration>
										<tasks>
											<replace dir="${project.build.directory}/webxml" >
												<include name="web.xml"/>
												<replacefilter     token="&lt;exception-type&gt;" value="&lt;!--exception-type&gt;"/>
												<replacefilter     token="&lt;/exception-type&gt;" value="&lt;/exception-type--&gt;"/>
												<replacefilter     token="&lt;!-- DONOT REMOVE ME start --&gt;" value="&lt;!-- DONOT REMOVE ME start"/>
												<replacefilter     token="&lt;!-- DONOT REMOVE ME end --&gt;" value="DONOT REMOVE ME end --&gt;"/>
											</replace>
											<replace dir="${project.build.outputDirectory}" >
												<include name="platform6.properties"/>
												<replacefilter     token="netty.server.switch=on" value="netty.server.switch=off"/>
											</replace>
										</tasks>
									</configuration>
									<goals>
										<goal>run</goal>
									</goals>
								</execution>
							</executions>
						  </plugin>
			       </plugins>
			</build>
			
        </profile>	
	
		<profile>
		    <id>notomcat</id>
			<build>
				<plugins>
				   <plugin>
					  <groupId>org.codehaus.cargo</groupId>
					  <artifactId>cargo-maven2-plugin</artifactId>
					 <configuration>
					   <container>
						  <containerId>tomcat7x</containerId>
						  <zipUrlInstaller>
							  <url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.52/bin/apache-tomcat-7.0.52.zip</url>
						  </zipUrlInstaller>
						  <timeout>300000</timeout> <!-- 5 minutes -->
						  <!--log>${basedir}/target/platform6.log</log-->
					   </container>
					   <deployables>
						   <deployable>
								<properties>
									<context>avicit-platform6-main</context>
								</properties>
							</deployable>
						</deployables>
						<configuration>
						   <properties>
							  <cargo.rmi.port>1099</cargo.rmi.port>
							  <cargo.servlet.port>8080</cargo.servlet.port>
							  <cargo.jvmargs>-server -Xms1024m -Xmx2048m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9999</cargo.jvmargs> 
						   </properties>
					   </configuration>
					</configuration>
				  </plugin>					
				</plugins>
			</build>
		</profile>
		<profile>
		    <id>tomcat</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven2-plugin</artifactId>
						<configuration>
							<container>
								<containerId>tomcat7x</containerId>
								<home>${env.CATALINA_HOME}</home>
								<timeout>300000</timeout> <!-- 5 minutes -->
							</container>
							<configuration>
								<type>existing</type>
								<home>${env.CATALINA_HOME}</home>
							   <properties>
								  <cargo.rmi.port>1099</cargo.rmi.port>
								  <cargo.servlet.port>8080</cargo.servlet.port>
								  <cargo.jvmargs>-server -Xms1024m -Xmx2048m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9999</cargo.jvmargs> 
							   </properties>
							</configuration>
							<deployer>
								<type>installed</type>
							</deployer>
						   <deployables>
							   <deployable>
									<properties>
										<context>avicit-platform6-main</context>
									</properties>
								</deployable>
							</deployables>							
						</configuration>
					</plugin>			
				</plugins>
			</build>
		</profile>
	</profiles>		
</project>